infra/k8s/observability/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: observability
spec:
  redirectScheme:
    scheme: https
    permanent: true
